[package]
name = "rustpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = { version = "0.64.0" }
clap = { version = "3.2.20", features = ["derive"] }
syn = { version = "1.0.99", features = ["full", "extra-traits"] }